--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
   "scripts": {
     "tsc": "tsc",
     "watch": "nodemon build/server.js",
-    "dev": "concurrently \"yarn tsc --watch\" \"yarn watch\""
+    "dev": "concurrently \"yarn tsc --watch\" \"yarn watch\"",
+    "lint": "tslint -p . -c tslint.json 'src/**/*.ts'"
   },
-  "dependencies": {
+  "devDependencies": {
     "@types/es6-shim": "^0.31.37",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
-    "body-parser": "^1.18.3",
+    "@types/node": "^10.9.4",
     "concurrently": "^4.0.1",
-    "express": "^4.16.3",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.4",
+    "prettier": "^1.14.2",
+    "prettier-tslint": "^0.4.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.4"
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3"
   }
 }
