--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "lint": "tslint -p . -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/es6-shim": "^0.31.37",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.7",
     "@types/node": "^10.9.4",
     "concurrently": "^4.0.1",
     "morgan": "^1.9.1",
@@ -26,6 +28,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "multer": "^1.3.1",
+    "reflect-metadata": "^0.1.12",
+    "routing-controllers": "^0.7.7"
   }
 }
