--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "watch": "nodemon build/server.js",
-    "dev": "concurrently \"yarn tsc --watch\" \"yarn watch\"",
+    "ddd": "ts-node -T",
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
     "lint": "tslint -p . -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
@@ -18,8 +18,6 @@
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^10.9.4",
-    "concurrently": "^4.0.1",
-    "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "prettier": "^1.14.2",
     "prettier-tslint": "^0.4.0",
@@ -30,7 +28,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "multer": "^1.3.1",
+    "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
-    "routing-controllers": "^0.7.7"
+    "routing-controllers": "^0.7.7",
+    "ts-node": "^7.0.1",
+    "typeorm": "^0.2.7"
   }
 }
