--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "license": "MIT",
   "scripts": {
     "tsc": "tsc",
-    "ddd": "ts-node -T",
-    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
+    "watch": "nodemon",
+    "dev": "concurrently \"yarn tsc --watch\" \"yarn watch build/server.js \"",
     "lint": "tslint -p . -c tslint.json 'src/**/*.ts'"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/es6-shim": "^0.31.37",
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^10.9.4",
+    "concurrently": "^4.0.1",
     "nodemon": "^1.18.4",
     "prettier": "^1.14.2",
     "prettier-tslint": "^0.4.0",
@@ -31,7 +31,6 @@
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
-    "ts-node": "^7.0.1",
     "typeorm": "^0.2.7"
   }
 }
