--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,7 +7,7 @@
   "database": "family-dashboard-dev",
   "synchronize": true,
   "logging": false,
-  "entities": ["src/entity/**/*.ts"],
+  "entities": ["build/entity/*.js"],
   "migrations": ["src/migration/**/*.ts"],
   "cli": {
     "entitiesDir": "src/entity",
