--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.11",
     "multer": "^1.3.1",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "routing-controllers": "^0.7.7",
-    "typeorm": "^0.2.7"
+    "typeorm": "^0.2.7",
+    "validator": "^10.7.1"
   }
 }
