--- a/package.json
+++ b/package.json
@@ -9,23 +9,31 @@
     "tsc": "tsc",
     "watch": "nodemon",
     "dev": "concurrently \"yarn tsc --watch\" \"yarn watch build/server.js \"",
-    "lint": "tslint -p . -c tslint.json 'src/**/*.ts'"
+    "lint": "tslint -p . -c tslint.json 'src/**/*.ts'",
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && yarn tsc && nyc mocha build/**/*.spec.js --exit"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.4",
     "@types/express": "^4.16.0",
+    "@types/mocha": "^5.2.5",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/node": "^10.9.4",
+    "chai": "^4.1.2",
     "concurrently": "^4.0.1",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
+    "nyc": "^13.0.1",
     "prettier": "^1.14.2",
     "prettier-tslint": "^0.4.0",
+    "supertest": "^3.3.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
     "multer": "^1.3.1",
