--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
