--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "multer": "^1.3.1",
     "pg": "^7.4.3",
