--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^3.0.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
