--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "tsc": "tsc",
     "watch": "nodemon",
-    "dev": "concurrently \"yarn tsc --watch  --project \"./tsconfig.json\"\" \"yarn watch build/src/server.js \"",
+    "rimraf": "rimraf",
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
     "lint": "tslint -p . -c tslint.json 'src/**/*.ts'",
-    "test": "export NODE_ENV=test || SET NODE_ENV=test && yarn tsc && nyc mocha build/**/*.spec.js --exit",
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && yarn tsc && nyc mocha build/**/*.spec.js --exit && yarn rimraf build",
     "start": "node build/src/server.js",
     "build:prod": "yarn tsc --project \"./tsconfig.prod.json\"",
     "heroku-postbuild": "yarn build:prod",
@@ -26,14 +27,15 @@
     "@types/multer": "^1.3.7",
     "@types/node": "^10.9.4",
     "chai": "^4.1.2",
-    "concurrently": "^4.0.1",
     "husky": "^0.14.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
     "nyc": "^13.0.1",
     "prettier": "^1.14.2",
     "prettier-tslint": "^0.4.0",
+    "rimraf": "^2.6.2",
     "supertest": "^3.3.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.3"
   },
