--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "multer": "^1.3.1",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
