--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "nodemon",
     "rimraf": "rimraf",
     "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
+    "seedDev": "ts-node src/utils/devSeeds.ts",
     "lint": "tslint -p . -c tslint.json 'src/**/*.ts'",
     "test": "yarn rimraf build && export NODE_ENV=test || SET NODE_ENV=test && yarn tsc && nyc mocha build/**/*.spec.js --exit",
     "start": "node build/src/server.js",
